--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -65,6 +65,7 @@
                 <li><a class="dropdown-toggle" data-toggle="dropdown")>Just Kidding!</a></li>
             </ul>
         </div>
+        {% if mapsys.map.truncate_allowed %}
          <div id="truncateButton" class="btn-group dropdown">
             <a class="btn btn-small btn-danger dropdown-toggle" data-toggle="dropdown">
                 Truncate Chain
@@ -74,6 +75,7 @@
                 <li><a class="dropdown-toggle" data-toggle="dropdown")>Just Kidding!</a></li>
             </ul>
         </div>
+        {% endif %}
    {% endif %}
     </div>
 </div>
