--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -20,6 +20,7 @@
     <button id="btnSilentAdd" class="btn btn-mini btn-info" onclick="ToggleSilentAdd();">Silent IGB Mapping: OFF</button>
     <button id='btnKspaceIGB' class='btn btn-mini btn-info' onclick='ToggleKspaceMapping();'>Map K-Space Connections: OFF</button>
     {% endif %}
+    <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
 </div>
 <div id="mapDiv" class="mapDiv">
 </div>
