--- a/evewspace/Map/templates/igb_system_add_dialog.html
+++ b/evewspace/Map/templates/igb_system_add_dialog.html
@@ -1,5 +1,5 @@
     <div class="modal-header">
-        <h4>New System: {{newsystem.name}} ({{newsystem.sysclass}})</h4>
+        <h4>New System: {{newsystem.name}} ({{newsystem.class_string}})</h4>
     </div>
     <div class="modal-body">
     <form id="sysAddForm" action="system/new/" method="post">
