--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -16,7 +16,7 @@
     </div>
     {% endif %}
     <div class="sysClassSpan">
-        {% if system.sysclass < 7 %}
+        {% if system.is_wspace %}
         <div class="span2"> 
             <strong>Class: {{system.sysclass}}</strong>
         </div>
@@ -24,7 +24,10 @@
             <strong>Effect: {{system.effect}}</strong>
         </div>
         <div class="span2">
-            <strong>Probable Statics: 
+            <strong>Probable Statics:
+                {% if not system.static1 %}
+                <span>Unknown</span>
+                {% else %}
                 <span title="Time: {{system.static1.lifetime}}H &nbsp Mass: {{system.static1.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static1.jumpmass|intcomma}}kg">
                     {{system.static1}} ({{system.static1.dest_string}})
             </span> 
@@ -32,7 +35,9 @@
             <span title="Time: {{system.static2.lifetime}}H &nbsp Mass: {{system.static2.maxmass|intcomma}}kg &nbsp Jump Mass: {{system.static2.jumpmass|intcomma}}">
                 {{system.static2}} ({{system.static2.dest_string}})
             </span>
-            {% endif %}</strong>
+            {% endif %}
+            {% endif %}
+        </strong>
         </div>
         {% endif %}
         {% if system.sysclass = 7 %}
@@ -48,7 +53,7 @@
         <br />
         Sov: {{system.sov}}
         {% endif %}
-        {% if system.sysclass > 6 %}
+        {% if system.is_kspace %}
         <ul class="inline"><li>Region: {{system.region}}</li><li>Constellation: {{system.constellation}}</li></ul>
         {% endif %}
     </div>
@@ -95,18 +100,16 @@
     {% endif %}
 </div>
 <div class="sysDetailsFooter row">
-    <div id="systemStatsPanel" class="systemStatsPanel {% if system.sysclass > 6 %}span3{%endif%}">
+    {% if system.is_kspace %}
+    <div id="systemStatsPanel" class="systemStatsPanel">
          <h6>System Statistics <br /> (Last Hour) </h6>
-         <ul class="systemStatsList {% if system.sysclass < 7%} inline {% endif %}">
+         <ul class="systemStatsList">
                 <li class="systemStatItem">NPC Kills: {{system.npckills}}</li>
                 <li class="systemStatItem">Ship Kills: {{system.shipkills}}</li>
                 <li class="systemStatItem">Pod Kills: {{system.podkills}}</li>
-                {% if system.sysclass > 6 %}
                 <li class="systemStatItem">Jumps: {{system.jumps}}</li>
-                {% endif %}
             </ul>
         </div>
-        {% if system.sysclass > 6 %}
         <div id="systemDestinationsDiv" class="span3">
         </div>
         {% endif %}
