Added eve-scout.com to intel list for Thera.

--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -45,6 +45,9 @@
         {% if system.is_wspace < 7 %}
         <li><a href="http://wh.pasta.gg/{{system.name}}" target="_blank">Wormhol.es</a></li>
         {% endif %}
+        {% if system.is_thera %}
+        <li><a href="http://eve-scout.com/" target="_blank">EveScout</a></li>
+        {% endif %}
 
     </ul>
 </div>
