Changed eve-scout conditional to use id instead of class for future-proofing.

--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -45,7 +45,7 @@
         {% if system.is_wspace < 7 %}
         <li><a href="http://wh.pasta.gg/{{system.name}}" target="_blank">Wormhol.es</a></li>
         {% endif %}
-        {% if system.is_thera %}
+        {% if system.id == 31000005 %}
         <li><a href="http://eve-scout.com/" target="_blank">EveScout</a></li>
         {% endif %}
 
