--- a/evewspace/account/templates/group_admin_users.html
+++ b/evewspace/account/templates/group_admin_users.html
@@ -1,6 +1,5 @@
 {% load account_tags %}
 <div class="GroupUsersContainer">
-    <span class="label label-success">Removal not yet implemented.</span>
     <br /><br />
     <table class="table table-hover">
         <tr>
@@ -12,7 +11,7 @@
         <tr>
             <td>{{member.username}}</td>
             <td>{% if member.is_active %}Yes{% else %}No{% endif %}</td>
-            <td><button class="btn btn-small btn-danger" disabled="disabled" onclick="RemoveGroupUser({{group.pk}}, {{member.pk}});">Remove</button></td>
+            <td><button class="btn btn-small btn-danger" onclick="RemoveGroupUser({{group.pk}}, {{member.pk}});$(this).parent().parent().hide()">Remove</button></td>
         </tr>
         {% endfor %}
     </table>
