--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -212,7 +212,7 @@ textarea
   top: 21px;
   content: '';
 }
-#sysDetails h4 {
+#sysInfoDiv h4 {
     border-top: 1px solid #ccc;
     clear: both;
     display: block;
