--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -7,6 +7,7 @@
     <li><a href="#systemPosPanel" data-toggle="tab">Starbases ({{mapsys.system.poses.count}})</a></li>
 </ul>
 <div id="sysTabHolder" class="well"> <!-- removed tab-content , no tabbing -->
+<a name="sysDetails"></a>
 <div id="sysDetails" class="tab-pane active">
 <div id="sysPanelHeader" class="systemPanelHeader row">
     <h4>{% if can_edit %}<i title="Edit Info" class="icon-pencil" onclick="GetEditSystemDialog({{mapsys.pk}});"></i>{% endif %}System Details: {{mapsys.system.name}} </h4>
@@ -117,6 +118,7 @@
      
 </div>
 </div>
+  <a name="sigsPanel"></a>
   <div id="sigsPanel" class="sigsPanel tab-pane">
             <div id="sigAddPanel" class"sigAddPanel">
                 <div style="margin-bottom: 10px; text-align: center;">
@@ -143,6 +145,7 @@
             <div id="sys{{mapsys.pk}}Signatures" class="signatureListDiv">
             </div>
     </div>
+    <a name="activePlayerPanel"></a>
     <div id="activePlayerPanel" class="activePlayerPanel tab-pane">
         <div id="activePlayerList" class="activePlayerList">
             <h4 style="margin-left: 120px;">Active Pilots: {{system.name}}</h4>
@@ -165,6 +168,7 @@
         </div>
     </div>
         {% load poslist %}    
+    <a name="systemPosPanel"></a>
     <div id="systemPosPanel" class="systemPosPanel tab-pane">
         <div style="text-align: center; margin-bottom: 10px;">
             <h4>Starbases: {{system.name}}</h4>
