--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -22,6 +22,7 @@
     {% endif %}
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
 </div>
+<div id="backtotop" onclick="window.location.href = '#mapDiv';"></div>
 <div id="mapDiv" class="mapDiv">
 </div>
 <div id="systemTooltipHolder">
