--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -13,6 +13,7 @@
     <script type="text/javascript">var ajax_image = "<img src= '{{STATIC_URL}}images/loading.gif'></img>"; </script>
 {% endblock %}
 {% block contentheader %}
+<div id="backtotop" onclick="scroll(0,0);"></div>
 <div class="btn-toolbar">
     <button class='btn btn-mini' onclick="RefreshMap();"><i class="icon-refresh"></i> Refresh</button>
     <button id="btnRefreshToggle" class="btn btn-mini btn-info" onclick="ToggleAutoRefresh();">Auto Refresh: ON</button>
@@ -22,7 +23,6 @@
     {% endif %}
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
 </div>
-<div id="backtotop" onclick="window.location.href = '#mapDiv';"></div>
 <div id="mapDiv" class="mapDiv">
 </div>
 <div id="systemTooltipHolder">
