--- a/evewspace/Map/templates/system_destinations.html
+++ b/evewspace/Map/templates/system_destinations.html
@@ -13,7 +13,7 @@
             <td>{{jumps}}</td>
             <td>{{ly}}</td>
             {% if is_igb_trusted %}
-            <td><button class='btn-mini' onclick="CCPEVE.setDestination({{dest.pk}});">D</button>&nbsp<button class='btn-mini' onclick="CCPEVE.addWaypoint({{dest.pk}});">W</button></td>
+            <td><button style="display: inline-block" onclick="CCPEVE.setDestination({{dest.pk}});">D</button>&nbsp<button style='display: inline-block' onclick="CCPEVE.addWaypoint({{dest.pk}});">W</button></td>
             {% endif %}
         </tr>
     {% endfor %}
