--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -103,8 +103,8 @@
 <div class="sysDetailsFooter row">
     {% if system.is_kspace %}
     <div id="systemStatsPanel" class="systemStatsPanel">
-         <h6>System Statistics <br /> (Last Hour) </h6>
-         <ul class="systemStatsList">
+         <h6>System Statistics (Last Hour) </h6>
+            <ul class="systemStatsList">
                 <li class="systemStatItem">NPC Kills: {{system.npckills}}</li>
                 <li class="systemStatItem">Ship Kills: {{system.shipkills}}</li>
                 <li class="systemStatItem">Pod Kills: {{system.podkills}}</li>
