--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -41,7 +41,7 @@
 {
     list-style: none;
 }
-.systemStatsItem {
+.systemStatItem {
     display: inline-block;
     padding-right: 5px;
     padding-left: 5px;
