implemented zen-mode

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -23,6 +23,7 @@
     {% endif %}
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
     <br />
+    <button class='btn btn-mini btn-info' onclick="togglezen()">Zen</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.25)">25%</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.5)">50%</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.6)">60%</button>
