--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -50,8 +50,8 @@
         {% if system.sysclass = 9 %}
         Null Sec
         {% endif %}
-        {% if not mapsys.system.is_wspace %}
-        <button class='btn btn-mini btn-info' onclick="CCPEVE.setDestination({{mapsys.system.pk}});">Set destination</button>
+        {% if system.is_kspace %}
+        <button class='btn btn-mini btn-info' onclick="CCPEVE.setDestination({{system.pk}});">Set destination</button>
         {% endif %}
         {% if system.sov %}
         <br />
