--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -42,7 +42,7 @@
 </div>
 <div id="legendDiv">
     <p class="text-info">
-        <em>Legend:</em> &nbsp
+        <em>Legend:</em> &nbsp;
         <ul class="inline">
             <li><img src='{{STATIC_URL}}images/pvp.png' height='32' width='32'></img>  PVP Activity </li>
             <li> <img src='{{STATIC_URL}}images/carebears.png' height='32' width='32'></img>  NPC Kills </li>
