--- a/evewspace/Map/templates/edit_system.html
+++ b/evewspace/Map/templates/edit_system.html
@@ -12,9 +12,9 @@
         <h4>Occupied: </h4>
         <textarea name="occupied" style="color: #000000; width:80%;" id="occupiedField" rows=4 >{{occupied}}</textarea><br />
         Type: &nbsp;
-        <label for="sysTypeRegular"><input type="radio" id="sysTypeRegular" class="editWormholeInput" name="importance" value="0" {% if mapsys.system.importance == 0 %} checked="checked" {% endif %}> <span style="color: #00cc00;">Regular System</span> </label>&nbsp;
-        <label for="sysTypeDangerous"><input type="radio" id="sysTypeDangerous" class="editWormholeInput" name="importance" value="1" {% if mapsys.system.importance == 1 %} checked="checked" {% endif %}> <span style="color: #cc0000;">Dangerous System</span> </label>&nbsp;
-        <label for="sysTypeImportant"><input type="radio" id="sysTypeImportant" class="editWormholeInput" name="importance" value="2" {% if mapsys.system.importance == 2 %} checked="checked" {% endif %}> <span style="color: #0000cc;">Important System</span> </label>
+        <label for="sysTypeRegular"><input type="radio" id="sysTypeRegular" class="editWormholeInput" name="importance" value="0" {% if mapsys.system.importance == 0 %} checked="checked" {% endif %}> <span style="color: #00ff00; text-weight: bold;">Regular System</span> </label>&nbsp;
+        <label for="sysTypeDangerous"><input type="radio" id="sysTypeDangerous" class="editWormholeInput" name="importance" value="1" {% if mapsys.system.importance == 1 %} checked="checked" {% endif %}> <span style="color: #ff0000; text-weight: bold;">Dangerous System</span> </label>&nbsp;
+        <label for="sysTypeImportant"><input type="radio" id="sysTypeImportant" class="editWormholeInput" name="importance" value="2" {% if mapsys.system.importance == 2 %} checked="checked" {% endif %}> <span style="color: #fffc00; text-weight: bold;">Important System</span> </label>
         <br />
         <input type="submit" style="display: none;">
     </form>
