--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -250,3 +250,15 @@ textarea
 label {
     display: inline;
 }
+#editWormholeDialog label[for=timeStatusEol],#editWormholeDialog label[for=massStatusReduced], #editSystemDialog label[for=sysTypeImportant] {
+    font-weight: bold;
+    color: #fffc00;
+}
+#editWormholeDialog label[for=timeStatusNormal], #editWormholeDialog label[for=massStatusNormal] #editSystemDialog label[for=sysTypeRegular] {
+    font-weight: bold;
+    color: #00ff00;
+}
+#editWormholeDialog label[for=massStatusCritical], #editSystemDialog label[for=sysTypeDangerous] {
+    font-weight: bold;
+    color: #ff0000;
+}
