--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -13,7 +13,10 @@
     <script type="text/javascript">var ajax_image = "<img src= '{{STATIC_URL}}images/loading.gif'></img>"; </script>
 {% endblock %}
 {% block contentheader %}
+<div id="scrollmenu">
 <div id="backtotop" onclick="scroll(0,0);"></div>
+<div id="tobuttons" onclick="window.location.href = '#sysInfo';"></div>
+</div>
 <div class="btn-toolbar">
     <button class='btn btn-mini' onclick="RefreshMap();"><i class="icon-refresh"></i> Refresh</button>
     <button id="btnRefreshToggle" class="btn btn-mini btn-info" onclick="ToggleAutoRefresh();">Auto Refresh: ON</button>
