--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -15,7 +15,7 @@
 {% block contentheader %}
 <div id="scrollmenu">
 <div id="backtotop" onclick="scroll(0,0);"></div>
-<div id="tobuttons" onclick="window.location.href = '#sysInfo';"></div>
+<div id="tobuttons" onclick="window.location.href = '#sysInfoDiv';"></div>
 </div>
 <div class="btn-toolbar">
     <button class='btn btn-mini' onclick="RefreshMap();"><i class="icon-refresh"></i> Refresh</button>
