--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -24,9 +24,10 @@
     <button id="btnSilentAdd" class="btn btn-mini btn-info" onclick="ToggleSilentAdd();">Silent IGB Mapping: OFF</button>
     <button id='btnKspaceIGB' class='btn btn-mini btn-info' onclick='ToggleKspaceMapping();'>Map K-Space Connections: OFF</button>
     {% endif %}
+    <button id='btnPilotList' class='btn btn-mini btn-info' onclick="togglepilotlist()">Pilot List</button>
     <button id='btnExportMap' class='btn btn-mini btn-info' onclick='GetExportMap();'>Export</button>
     <br />
-    <button class='btn btn-mini btn-info' onclick="togglezen()">Zen</button>
+    <button id='btnZen' class='btn btn-mini btn-info' onclick="togglezen()">Zen</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.25)">25%</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.5)">50%</button>
     <button class='btn btn-mini btn-info' onclick="scale(0.6)">60%</button>
